[gd_scene load_steps=9 format=3 uid="uid://b7mn3xr8qw2yk"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="2_spawner"]
[ext_resource type="Script" path="res://scripts/GameOverDetector.gd" id="3_detector"]
[ext_resource type="Script" path="res://scripts/ShakeManager.gd" id="4_shake"]
[ext_resource type="Texture2D" uid="uid://d2k4kstcfkxbd" path="res://assets/sprites/backgrounds/beachbackground.png" id="5_background"]

[sub_resource type="StyleBoxFlat" id="container_style"]
bg_color = Color(0.95, 0.95, 0.85, 0.7)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="RectangleShape2D" id="wall_shape"]
size = Vector2(20, 1100)

[sub_resource type="RectangleShape2D" id="floor_shape"]
size = Vector2(650, 20)

[sub_resource type="RectangleShape2D" id="detector_shape"]
size = Vector2(650, 80)

[sub_resource type="CircleShape2D" id="corner_shape"]
radius = 20.0

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540, 960)
zoom = Vector2(1, 1)

[node name="BackgroundSprite" type="Sprite2D" parent="."]
position = Vector2(540, 960)
scale = Vector2(1.055, 1.25)
texture = ExtResource("5_background")
z_index = -2

[node name="Container" type="Node2D" parent="."]
position = Vector2(540, 960)

[node name="LeftWall" type="StaticBody2D" parent="Container"]
position = Vector2(-325, 0)
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/LeftWall"]
shape = SubResource("wall_shape")

[node name="ColorRect" type="ColorRect" parent="Container/LeftWall"]
offset_left = -10.0
offset_top = -550.0
offset_right = 10.0
offset_bottom = 550.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="RightWall" type="StaticBody2D" parent="Container"]
position = Vector2(325, 0)
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/RightWall"]
shape = SubResource("wall_shape")

[node name="ColorRect" type="ColorRect" parent="Container/RightWall"]
offset_left = -10.0
offset_top = -550.0
offset_right = 10.0
offset_bottom = 550.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Floor" type="StaticBody2D" parent="Container"]
position = Vector2(0, 550)
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Floor"]
shape = SubResource("floor_shape")

[node name="ColorRect" type="ColorRect" parent="Container/Floor"]
offset_left = -325.0
offset_top = -10.0
offset_right = 325.0
offset_bottom = 10.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="BottomLeftCorner" type="StaticBody2D" parent="Container"]
position = Vector2(-325, 550)
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/BottomLeftCorner"]
shape = SubResource("corner_shape")

[node name="BottomRightCorner" type="StaticBody2D" parent="Container"]
position = Vector2(325, 550)
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/BottomRightCorner"]
shape = SubResource("corner_shape")

[node name="Background" type="Panel" parent="Container"]
offset_left = -325.0
offset_top = -550.0
offset_right = 325.0
offset_bottom = 550.0
theme_override_styles/panel = SubResource("container_style")
z_index = -1

[node name="GameplayArea" type="Node2D" parent="."]
position = Vector2(540, 960)

[node name="SpawnPoint" type="Marker2D" parent="GameplayArea"]
position = Vector2(0, -440)
gizmo_extents = 20.0

[node name="NextFruitPreview" type="Sprite2D" parent="GameplayArea"]
position = Vector2(0, -380)
modulate = Color(1, 1, 1, 0.7)

[node name="FruitContainer" type="Node2D" parent="GameplayArea"]

[node name="GameOverDetector" type="Area2D" parent="GameplayArea"]
position = Vector2(0, -505)
collision_layer = 8
collision_mask = 2
monitoring = true
script = ExtResource("3_detector")
grace_period = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameplayArea/GameOverDetector"]
shape = SubResource("detector_shape")

[node name="DangerZoneVisual" type="ColorRect" parent="GameplayArea/GameOverDetector"]
offset_left = -325.0
offset_top = -40.0
offset_right = 325.0
offset_bottom = 40.0
color = Color(1, 0, 0, 0.1)

[node name="Managers" type="Node" parent="."]

[node name="Spawner" type="Node" parent="Managers"]
script = ExtResource("2_spawner")

[node name="ShakeManager" type="Node" parent="Managers"]
script = ExtResource("4_shake")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HighScoreLabel" type="Label" parent="UI"]
offset_left = 50.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "High Score: 0"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 50.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "Score: 0"

[node name="NextFruitLabel" type="Label" parent="UI"]
offset_left = 50.0
offset_top = 190.0
offset_right = 250.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Next: Cherry"
visible = false

[node name="NextFruitSprite" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(100, 210)

[node name="ShakeButton" type="Button" parent="UI"]
offset_left = 740.0
offset_top = 1720.0
offset_right = 1000.0
offset_bottom = 1900.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 40
text = "SHAKE
50"

[node name="RefillButton" type="Button" parent="UI"]
visible = false
offset_left = 280.0
offset_top = 1720.0
offset_right = 720.0
offset_bottom = 1900.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Watch Ad
Refill Shakes"

[node name="PauseButton" type="Button" parent="UI"]
offset_left = 920.0
offset_top = 40.0
offset_right = 1040.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 48
text = "| |"
